--- a/demo/myapp/templates/home.html
+++ b/demo/myapp/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Home Page {% endblock %}
+{% extends 'base.html' %} {% block title %} Yokoso Watashiwa Soul Society {% endblock %}
 {% block content %}
 <p>This is the Home Page</p>
 {% endblock %}
